Allow build and test with JDK 16 (#2435)